# spool

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT.md  README.md  ROADMAP.md  SECURITY.md
.spool/: validation-commands.txt
.spool/bootstrap-tasks/: TEMPLATE.md
.tasker/bootstrap-tasks/: TEMPLATE.md
crates/spool-cli/: Cargo.toml
crates/spool-config/: Cargo.toml
crates/spool-db/: Cargo.toml
crates/spool-runner/: Cargo.toml  README.md
crates/spool-server/: Cargo.toml
crates/spool-symphony/: Cargo.toml
crates/tasker-cli/: Cargo.toml
crates/tasker-cli/src/: bootstrap.rs  cleanup.rs  cleanup_cmd.rs  cli_tests.rs  commit_metadata.rs  db_cmd.rs  delegate_cmd.rs  local_worktree_delivery.rs  main.rs  merge_cmd.rs  monitor.rs  output.rs  queue_cmd.rs  repo_lock.rs  review_cmd.rs  review_packet.rs  run_cmd.rs  serve_cmd.rs  status_cmd.rs  supervise_cmd.rs  supervisor.rs  task_cmd.rs  telemetry.rs  telemetry_cmd.rs  work_cmd.rs  worker.rs
crates/tasker-config/: Cargo.toml
crates/tasker-db/: Cargo.toml
crates/tasker-runner/: Cargo.toml  README.md
crates/tasker-runner/src/: commit_metadata.rs  delegate.rs  lib.rs  local_worktree_delivery.rs  repo_lock.rs  review.rs  supervisor.rs  worker.rs
crates/tasker-server/: Cargo.toml
crates/tasker-server/src/: lib.rs
docs/: AGENT_EFFICIENCY_STRATEGY.md  AGENT_GATED_INTEGRATING_PLAN.md  DELEGATION_SESSION.md  FIRST_RUN_ADOPTION_JOURNEY.md  FIRST_RUN_QUICKSTART.md  IMPLEMENTATION_PLAN.md  MANUAL_DOGFOOD_MERGE.md  MONITOR.md  OPEN_TELEMETRY_MAPPING.md  PI_RPC_SMOKE.md  PRE_DOGFOODING_LOOP.md  REPOSITORY_LOCAL_STATE.md  REVIEW_AND_INTEGRATION_LANES.md  REVIEW_SESSION.md  RUNNER_EXTRACTION_PLAN.md  TASK_DELEGATION_SESSION_TUTORIAL.md  integration-outcome-reason-codes.md
docs/adr/: 0001-symphony-compatible-task-backend.md  0002-first-class-spool-api.md  0002-first-class-tasker-api.md  0003-http-json-service-api.md  0004-task-queues-not-projects.md  0005-fixed-v1-task-lifecycle.md  0006-enforce-task-state-transitions.md  0007-agent-mediated-task-intake.md  0008-separate-delegation-lineage-from-blocking.md  0009-separate-task-state-from-agent-run.md  0010-blockers-resolve-only-on-done.md  0011-persist-agent-run-claim-leases.md  0012-queue-prefixed-task-identifiers.md  0013-structured-task-requirements.md  0014-first-class-workpad-note.md  0015-agent-mediated-review-decisions.md  0016-task-links-for-external-artifacts.md  0017-operator-managed-task-queues.md  0018-require-actor-attribution.md  0019-enforce-optional-queue-concurrency-limits.md  0020-current-state-plus-audit-event-log.md  0021-sqlite-first-persistence.md  0022-local-first-token-auth.md  0023-structured-completion-evidence.md  0024-local-first-worktree-workflow.md  (+20 more)
scripts/: migrate-dogfood-state-to-spool.sh
(+100 files in other folders)
