[workspace]
members = [
    "crates/tasker-cli",
    "crates/tasker-config",
    "crates/tasker-db",
    "crates/tasker-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/seemethere/tasker"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.9.8"
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
