[package]
name = "tasker-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tasker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = "0.28"
ratatui = "0.29"
tasker-config = { path = "../tasker-config" }
tasker-db = { path = "../tasker-db" }
tasker-server = { path = "../tasker-server" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
