[package]
name = "tasker-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tasker-db = { path = "../tasker-db" }

[dev-dependencies]
tempfile.workspace = true
