[package]
name = "tasker-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true
