[package]
name = "tasker-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
sqlx.workspace = true
tasker-db = { path = "../tasker-db" }
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tower.workspace = true
